# FinancialMediator

./: .black.toml  .dockerignore  .dockerignore.bak  .env  .env.example  .gitignore  .pre-commit-config.yaml  .replit  .windsurfrules  Dockerfile  Dockerfile.bak  Dockerfile.bak.bak  Dockerfile.dev  README.md  README.md.bak  README.md.bak.bak  app.py  cleanup.ps1  compose.yaml  compose.yaml.bak  config.py  deploy.ps1  docker-compose.yml  docker-entrypoint.sh  main.py  models.py  otel-config.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup-minikube.ps1  uwsgi.ini  wait-for-it.sh
.github/workflows/: django.yml  k8s-deploy.yaml
api/: __init__.py  apps.py  auth.py  banking.py  cache.py  error_handlers.py  health.py  middleware.py  models.py  openapi.yaml  providers.py  serializers.py  tasks.py  transformers.py  urls.py  validation.py
api/auth/: decorators.py
api/cache/: cache_manager.py
api/health/: serializers.py  views.py
attached_assets/: Pasted-Onboarding-and-Profile-Management-Use-customer-s-mobile-number-or-any-other-parameters-as-per-banks-1742547843212.txt  Pasted-Traceback-most-recent-call-last-File-home-runner-workspace-pythonlibs-lib-python3-11-site-p-1742554278778.txt
backend/: Dockerfile  README.md  __init__.py  docker-compose.yml  requirements.txt
banking/: __init__.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py
banking_api/: admin.py  apps.py  exceptions.py  models.py  views.py
banking_project/: asgi.py  settings.py  urls.py  wsgi.py
config/: opentelemetry.py
core/: asgi.py  celery.py  sentry.py  settings.py  urls.py  wsgi.py
docs/: README.md
financialmediator/: __init__.py  urls.py  wsgi.py
frontend/: Dockerfile.bak  Dockerfile.bak.bak  README.md  docker-compose.yml  package.json  tsconfig.json
instance/: banking_middleware.db
k8s/: Chart.yaml  cleanup_minikube.py  config.py  configmap.yaml  deployment.yaml  manager.py  namespace.yaml  postgres-deployment.yaml  postgres-pv.yaml  postgres-pvc.yaml  postgres-service.yaml  service.yaml  setup_minikube.py  values.yaml
ops/: Makefile  README.md  requirements.txt
providers/: __init__.py  admin.py  apps.py  exceptions.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
scripts/: deploy.py  performance_monitor.py  security_audit.py
templates/: index.html  metrics_dashboard.html  status.html
tests/: conftest.py  run_tests.py  settings.py  test_auth.py  test_kyc.py  test_middleware.py  test_models.py  test_models_direct.py  test_provider.py
utils/: cache.py  connection_pool.py  error_handlers.py  logging_config.py  middleware.py  rate_limit.py  security.py  telemetry.py
venv_new/: pyvenv.cfg
venv_test/: pyvenv.cfg
(+178 files in other folders)
