[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-jwt-extended>=4.7.1",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.39",
    "flask-login>=0.6.3",
    "flask-restful>=0.3.10",
    "requests>=2.32.3",
    "marshmallow>=3.26.1",
    "werkzeug>=3.1.3",
    "python-dotenv>=1.0.1",
    "django>=5.1.7",
    "djangorestframework>=3.15.2",
    "django-filter>=25.1",
    "djangorestframework-simplejwt>=5.5.0",
    "django-cors-headers>=4.7.0",
    "cryptography>=44.0.2",
    "opentelemetry-instrumentation-django>=0.52b1",
    "opentelemetry-instrumentation-logging>=0.52b1",
    "opentelemetry-instrumentation-requests>=0.52b1",
    "opentelemetry-exporter-prometheus>=0.52b1",
    "opentelemetry-distro>=0.52b1",
    "prometheus-client>=0.21.1",
    "opentelemetry-api>=1.31.1",
    "opentelemetry-sdk>=1.31.1",
    "uwsgi>=2.0.28",
]
